baml_language/crates/baml_tests/snapshots/compiles/literal_union_widening/baml_tests__compiles__literal_union_widening__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.annotatedLiteralUnion() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: 1 | 2 // x

    bb0: {
        _1 = const 1_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.arrayOfInts() -> int[] {
    // Locals:
    let _0: int[] // _0 // return
    let _1: int[] // x

    bb0: {
        _1 = [const 1_i64, const 2_i64, const 3_i64]: int[];
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.mapOfInts() -> map<string, int> {
    // Locals:
    let _0: map<string, int> // _0 // return
    let _1: map<string, int> // m

    bb0: {
        _1 = { const "a": const 1_i64, const "b": const 2_i64 }: map<string, int>;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.nestedArray() -> int[][] {
    // Locals:
    let _0: int[][] // _0 // return
    let _1: int[][] // x
    let _2: int[]
    let _3: int[]

    bb0: {
        _2 = [const 1_i64, const 2_i64]: int[];
        _3 = [const 3_i64, const 4_i64]: int[];
        _1 = [copy _2, copy _3]: int[][];
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
