baml_language/crates/baml_tests/snapshots/compiles/literal_union_widening/baml_tests__compiles__literal_union_widening__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 11347
---
=== TIR2 ===
function user.arrayOfInts() -> int[] throws never {
  { : never
    let x = [1, 2, 3] : int[]
    return x : int[]
  }
}
function user.mapOfInts() -> map<string, int> throws never {
  { : never
    let m = map { "a": 1, "b": 2 } : map<string, int>
    return m : map<string, int>
  }
}
function user.nestedArray() -> int[][] throws never {
  { : never
    let x = [[1, 2], [3, 4]] : int[][]
    return x : int[][]
  }
}
function user.annotatedLiteralUnion() -> int throws never {
  { : never
    let x: 1 | 2 = 1 : 1
    return x : 1
  }
}
