baml_language/crates/baml_tests/snapshots/compiles/literal_union_widening/baml_tests__compiles__literal_union_widening__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 11434
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
