baml_language/crates/baml_tests/snapshots/compiles/literal_union_widening/baml_tests__compiles__literal_union_widening__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 15846
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function user.annotatedLiteralUnion() -> int {
    load_const 1
    return
}

function user.arrayOfInts() -> int[] {
    load_const 1
    load_const 2
    load_const 3
    load_type int
    alloc_array 3
    return
}

function user.mapOfInts() -> map<string, int> {
    load_const 1
    load_const 2
    load_const "a"
    load_const "b"
    load_type string
    load_type int
    alloc_map 2
    return
}

function user.nestedArray() -> int[][] {
    load_const 1
    load_const 2
    load_type int
    alloc_array 2
    load_const 3
    load_const 4
    load_type int
    alloc_array 2
    load_type int[]
    alloc_array 2
    return
}
